--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -11,17 +12,22 @@ body {
   color: #222;
 }
 
-.galeria {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 20px;
-  padding: 20px;
+.busqueda {
+  margin-top: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.busqueda{
-    margin-top: 20px;
-    text-align: center;
-    margin-bottom: 20px;
+
+.pokemon-container {
+  width: 100px;
+  height: 300px;
+  background: #fff;
+  border-radius: 16px;
+  padding: 20px;
+  text-align: center;
 }
+
+
 
 
