--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(to right, #74ebd5, #ACB6E5);
+  background: #f0f0f0;
 }
 
 .titulo {
@@ -20,6 +20,8 @@ body {
 
 
 .pokemon-container {
+  display: flex;
+  flex-direction: column;
   width: 100px;
   height: 300px;
   background: #fff;
