--- a/style.css
+++ b/style.css
@@ -20,14 +20,13 @@ body {
 
 
 .pokemon-container {
-  display: flex;
-  flex-direction: column;
   width: 100px;
   height: 300px;
   background: #fff;
   border-radius: 16px;
   padding: 20px;
   text-align: center;
+  margin: 20px auto;
 }
 
 
